src/test/baseman/invalid-usage/case-multi-params-1/commands/default.ts
import {Command, param, params} from '../../../../..';

export default class extends Command {
  execute(
    @param({
      description: 'Some name',
      required: true,
    })
    name: string,
    @params({
      type: String,
    })
    texts: string[],
    @params({
      type: String,
    })
    extraTexts: string[],
  ) {
    // tslint:disable-next-line
    [name, texts, extraTexts];
  }
}
